express-like eventName params

--- a/bench/web/index.html
+++ b/bench/web/index.html
@@ -35,7 +35,7 @@
 
   function generateStrings(len,arr){
     let max = 100;
-    let chars = "abcdefghijklmnoprstquwxyz0123456789!@#$%^&(){}[] -=+_\\|/<>,:\'\"";
+    let chars = "abcdefghijklmnoprstquwxyz0123456789!@#$%^&(){}[] -=+_\\|<>,:\'\"";
     for(let i=0;i<len;i++){
       let currLen = Math.round(Math.random()*max);
       let str = "";
